Corrects mistakes in css

--- a/sass/components/_qualities.scss
+++ b/sass/components/_qualities.scss
@@ -34,12 +34,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 450px;
+    max-width: 450px;
     height: 120px;
     margin-bottom: 30px;
     border-radius: 4px;
 
     background-color: $teamBgColor;
+
+    // @media screen and (max-width:calc($mobile - 1px)){
+    //     width: 290px;
+    // }
     
     @media screen and (min-width:$tablet){
         width: 354px;
