--- a/css/main.css
+++ b/css/main.css
@@ -882,7 +882,7 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 450px;
+  max-width: 450px;
   height: 120px;
   margin-bottom: 30px;
   border-radius: 4px;
@@ -1262,7 +1262,7 @@ img {
 }
 
 .subscribe__form {
-  width: 450px;
+  max-width: 450px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1280,7 +1280,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .subscribe__form {
-    width: 570px;
+    max-width: 570px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -1298,6 +1298,11 @@ img {
   border-radius: 4px;
   background-color: inherit;
   outline: transparent;
+}
+@media screen and (max-width: 479px) {
+  .subscribe__input {
+    width: 290px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .subscribe__input {
