--- a/css/main.css
+++ b/css/main.css
@@ -270,8 +270,8 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  width: 450px;
-  height: 609px;
+  max-width: 450px;
+  width: 100%;
   padding: 40px;
   border-radius: 4px;
   background-color: #FFFFFF;
@@ -289,8 +289,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
-    height: 581px;
+    max-width: 528px;
   }
 }
 
@@ -341,15 +340,6 @@ img {
   }
 }
 
-.form {
-  width: 370px;
-}
-@media screen and (min-width: 1200px) {
-  .form {
-    width: 448px;
-  }
-}
-
 .form__group {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -385,6 +375,7 @@ img {
 .form__input,
 .form__message {
   width: 100%;
+  max-width: 448px;
   margin: 0;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
