--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -25,8 +25,9 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
 
-    width: 450px;
-    height: 609px;
+    max-width: 450px;
+    width: 100%;
+
     padding: 40px;
 
     border-radius: 4px;
@@ -43,8 +44,8 @@
     }
 
     @media screen and (min-width:$desctop){
-        width: 528px;
-        height: 581px;
+       max-width: 528px;
+
     }   
 }
 
@@ -96,15 +97,6 @@
     }   
 }
 
-.form {
-    width: 370px;
-
-    @media screen and (min-width:$desctop){
-        width: 448px;
-    }   
-
-}
-
 .form__group {
     display: flex;
     flex-direction: column;
@@ -133,6 +125,7 @@
 .form__input,
 .form__message {
     width: 100%;
+    max-width:448px;
     margin: 0;
     padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
